# expense-tracker-api

./: .coverage  .coverage.integration  .dockerignore  .env.example  .gitignore  ALEMBIC.md  DATABASE_OPERATIONS.md  DEVELOPMENT_DEPLOYMENT.md  Dockerfile  MIGRATION_STRATEGY.md  README.md  SCHEMA_MIGRATION_GUIDE.md  Setup.md  alembic.ini  coverage.xml  database_commands.txt  db_manager.py  docker-compose.yaml  entrypoint.sh  logging_config.py  main.py  models.py  populate_test_data.py  postgres_test.sh  pyproject.toml  requirements.txt  seed_database.py  services.py  utils.py
.github/workflows/: cd.yml  ci.yml
backups/: .gitignore
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_notification.py  002_modify_column_type.py  003_add_nullable_column.py  004_add_nonnull_column.py  005_modify_column_type.py  006_rename_column.py  007_delete_column.py  008_add_foreign_key.py  009_add_unique_constraint.py  010_delete_table.py  92785daea096_add_debitcard_table.py  a7c9dbe788d2_add_savings_id_to_expense_table.py  b8d0ecf899e3_add_creditcardtransaction_table.py
nginx/: nginx.conf
nginx/ssl/: README.md
tests/: conftest.py  test_api.py
